Add to application.properties mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,15 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/WarehouseManagementSystem_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/WebMarketplace_db
 spring.datasource.username=postgres
 spring.datasource.password=1111
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=volodimirtuka@gmail.com
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
