--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
