--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,11 @@ server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/WebMarketplace_db
@@ -18,6 +20,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=volodimirtuka@gmail.com
-
+spring.mail.password=sexudxpfhhrxkytt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+server.ssl.key-store=classpath:keystore/key.jks
+server.ssl.key-store-password=987654321K
+server.ssl.key-password=987654321K
